--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<footer>
+  Vytvorené: SDA; | &nbsp; Linka tiesňového volania: <strong>150</strong>
+</footer>
