--- a/templates/header.html
+++ b/templates/header.html
@@ -17,6 +17,6 @@
   </div>
 
   <div class="header-right">
-    <img src="{% static 'images/logo.png' %}" alt="Logo" height="40">
+    <img src="{% static 'images/logo.jpg' %}" alt="Logo" height="130">
   </div>
 </header>
