Add filtering for equipment with upcoming revisions (within 30 days)

--- a/templates/header.html
+++ b/templates/header.html
@@ -10,6 +10,7 @@
     <nav>
       <a href="{% url 'station_list' %}">Filterovať Stanice</a>
       <a href="#">Filterovať Výstroj</a>
+      <a href="{% url 'upcoming_revisions' %}">Nadchádzajúca revízia</a>
       <a href="#">Tlačové Formuláre</a>
       <a href="#">Archív</a>
       <a href="{% url 'logout' %}">Odhlásiť sa</a>
