fixed typos in html

--- a/templates/header.html
+++ b/templates/header.html
@@ -8,8 +8,8 @@
 
   <div class="header-center">
     <nav>
-      <a href="{% url 'station_list' %}">Filterovať Stanice</a>
-      <a href="#">Filterovať Výstroj</a>
+      <a href="{% url 'station_list' %}">Filtrovať Stanice</a>
+      <a href="#">Filtrovať Výstroj</a>
       <a href="{% url 'upcoming_revisions' %}">Nadchádzajúca revízia</a>
       <a href="#">Tlačové Formuláre</a>
       <a href="#">Archív</a>
