--- a/templates/header.html
+++ b/templates/header.html
@@ -18,6 +18,6 @@
   </div>
 
   <div class="header-right">
-    <img src="{% static 'images/logo.jpg' %}" alt="Logo" height="130">
+    <img src="{% static 'images/logo.png' %}" alt="Logo" height="140">
   </div>
 </header>
