Improved login styling and layout;

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,7 @@
 {% load static %}
 <header>
   <div class="header-left">
-    <img src="{% static 'images/logo.png' %}" alt="Logo" class="header-logo">
+    <img src="{% static 'images/logo_head.png' %}" alt="Logo" class="header-logo">
 
     <div class="station-info-box">
       <div class="station-code">ZM</div>
