--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,7 +34,7 @@
 /* BODY + HEADER + FOOTER */
 body {
   margin: 0;
-  font-family: Arial, sans-serif;
+  font-family: 'Poppins', sans-serif;
   padding-top: 140px;
   padding-bottom: 60px;
 }
@@ -210,7 +210,8 @@ td button {
 }
 
 .equipment-table tr.danger {
-  background: #ffcdd2; /* red for Kriticky */
+  background: #b71c1c; /* red for Kriticky */
+  color: white;
 }
 
 .equipment-table td select {
@@ -384,4 +385,14 @@ td form {
 .datetime {
   color: #c62828;
   text-align: center;
+  font-family: monospace;
+  font-variant-numeric: tabular-nums; tabular-nums;
+}
+
+.equipment-table tbody tr:hover {
+  background-color: #f1f1f1;
+}
+
+.status-dropdown {
+  border-radius: 6px;
 }
