--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
   <meta charset="UTF-8">
   <title>{% block title %}Hasičská Stanica{% endblock %}</title>
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   {% block extra_head %}{% endblock %}
 </head>
 <body>
